[package]
name = "rust4mch"
version = "0.1.0"
edition = "2021"
authors = ["jhaand"]
license = "GPL v3"
keywords = ["embedded", "idf", "esp-idf", "esp32"]
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# Enable this feature for the build to use the PlatformIO tooling instead of the native ESP-IDF tooling under the hood
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
#anyhow = {version = "1", features = ["backtrace"]}
#url = "2"
#esp-idf-svc = "0.42.1"
#esp-idf-hal = "0.38"
##embedded-svc = "0.22.1"
#embedded-hal = "0.2"
#embedded-graphics = "0.7"
#embedded-text = "0.5.0"
#display-interface = "0.4"
#display-interface-spi = "0.4"
#ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
#log = "0.4"

[build-dependencies]
embuild = "0.29"
anyhow = "1"

